auditing fields and baseline exception handling added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,12 @@ spring.datasource.initialization-mode=always
 # Good for production!
 # spring.jpa.hibernate.ddl-auto=update
 # spring.datasource.initialization-mode=never
+#
+# Used to set the date format for JSON Output
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=America/Los_Angeles
+#
+# Turns off Spring Boot automatic exception handling
+server.error.whitelabel.enabled=false
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
