--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,9 @@ spring.jpa.open-in-view=true
 #
 # What do with the schema
 # drop n create table again, good for testing
+#
+# DO NOT CHANGE - leaving the next line on 'create' rather than 'update' before deploying will cause the
+# deployed database to be reset immediately, and on daily restart of the api
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=never
 #
